feature: add test implementations for compose plugin and refactor all plugins